[tool.poetry]
name = "tf_swin_unet"
version = "0.1.7"
description = "A robust, flexible Swin UNET Transformer package for segmentation tasks."
authors = ["L-A-Sandhu <laeeq.aslam.100@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "keras_swin_unet", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.26.4"
tensorflow = "^2.19.0"
pillow = "^11.2.1"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
scipy = "^1.15.2"
tqdm = "^4.67.1"

[tool.poetry.scripts]
swin-transformer = "swin_transformer.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
twine = "^6.1.0"

